--- a/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
+++ b/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Result" Version="10.1.0" />
+    <PackageReference Include="FastEndpoints.Messaging.Core" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
