project and namespace renamed and adjustments

--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TC.CloudGames.Application\TC.CloudGames.Application.csproj" />
-    <ProjectReference Include="..\TC.CloudGames.Domain.CrossCutting.IoC\TC.CloudGames.Domain.CrossCutting.IoC.csproj" />
+    <ProjectReference Include="..\TC.CloudGames.CrossCutting.IoC\TC.CloudGames.CrossCutting.IoC.csproj" />
   </ItemGroup>
 
 </Project>
