--- a/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
+++ b/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FastEndpoints" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
