--- a/src/TC.CloudGames.Infra.Data/TC.CloudGames.Infra.Data.csproj
+++ b/src/TC.CloudGames.Infra.Data/TC.CloudGames.Infra.Data.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TC.CloudGames.Application\TC.CloudGames.Application.csproj" />
+    <ProjectReference Include="..\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
