--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=tc-cloud-games-db;Port=5432;Database=tc_cloud_games;Username=postgres;Password=postgres;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
