Add user list endpoint and update Docker configuration
- Updated `docker-compose.yml` to expose ports 55555 and 55556 for `tc.cloudgames.api`.
- Added `GetUserListEndpoint` to handle user list retrieval with anonymous access.
- Removed password selection from `GetUserQueryHandler.cs` for security.
- Introduced `GetUserListQuery` for pagination and sorting parameters.
- Created `GetUserListQueryHandler` to process user list queries with filtering and pagination.
- Added `UserListResponse` class to define the structure of user data in responses.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   tc.cloudgames.api:
     image: ${DOCKER_REGISTRY-}tccloudgamesapi
+    ports: 
+      - "55555:8080"
+      - "55556:8081"
     container_name: TC.CloudGames.Api
     build:
       context: .
