Refactor database configuration for environment variables
Updated multiple files to support dynamic database connection settings using environment variables for host and port. Added `DB_HOST` and `DB_PORT` to `docker-compose.override.yml` and `launchSettings.json`. Modified `appsettings.Development.json` to utilize these variables, while removing `appsettings.Docker.json`. Introduced a static `FieldMappings` dictionary in `GetUserListQueryHandler.cs` for improved query execution. Adjusted `DependencyInjection.cs` and `SqlConnectionFactory.cs` to dynamically handle connection strings based on the new environment variables.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - DB_HOST=tc-cloud-games-db
+      - DB_PORT=5432
     ports:
       - "8080"
       - "8081"
