--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=54320;Database=tc_cloud_games;Username=postgres;Password=postgres;"
+    "Database": "Host=${DB_HOST};Port=${DB_PORT};Database=tc_cloud_games;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
