Add correlation ID support and improve logging
Implemented a correlation ID feature to enhance request tracking across services. Added `CorrelationIdGenerator` and `CorrelationMiddleware` for managing correlation IDs. Introduced `BaseLogger` for standardized logging with correlation IDs. Updated dependency injection in `Program.cs`, modified `CommandLogger` to utilize the new logging mechanism, and adjusted project files for necessary references. Streamlined database connection handling by removing redundant environment variable retrievals.

--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\TC.CloudGames.Infra.Data\TC.CloudGames.Infra.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Endpoints\Games\" />
+  </ItemGroup>
+
 </Project>
