Add game and user endpoints; improve async performance
- Introduced new endpoint classes for game creation, retrieval, and listing.
- Added `LoginEndpoint` for handling user login requests.
- Enhanced performance by adding `ConfigureAwait(false)` to async calls in multiple endpoints and services.
- Updated `UseCustomExceptionHandler` for method chaining.
- Cleaned up project file and added `JwtSecretKey` to configuration.
- Refactored user command and handler classes for consistency and immutability.
- Implemented user login functionality with validation rules.
- Improved Entity Framework Core compatibility in the `User` class and `ApplicationDbContext`.
- Added case-insensitive email comparisons in `UserConfiguration`.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSecretKey": "Secret_Key_Longer_Than_32_Characters_@#$%!"
 }
