Enhance API documentation and improve migration handling
- Added detailed summaries and example requests/responses for CreateUser, Login, GetUser, and GetUserList endpoints.
- Implemented Faker library in GetUserListEndpoint for realistic sample data.
- Modified ApplyMigrations method to be asynchronous for better performance.
- Improved Swagger documentation configuration with additional settings.
- Updated application pipeline to support asynchronous migrations and short endpoint names.
- Enabled XML documentation generation in project files and suppressed warnings for missing comments.

--- a/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
+++ b/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>CS1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
