--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -33,4 +33,10 @@
     <ProjectReference Include="..\TC.CloudGames.Infra.Data\TC.CloudGames.Infra.Data.csproj" />
   </ItemGroup>
 
+
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>CS1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
