--- a/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
+++ b/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FastEndpoints.Security" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
