Enhance game creation features and refactor user endpoint
- Removed `CreateUserMapper` dependency from `CreateUserEndpoint`.
- Enhanced `CreateGameEndpoint` with role-based access, detailed descriptions, and request/response examples.
- Updated `Program.cs` for improved database configuration management.
- Cleaned up `launchSettings.json` by removing unnecessary environment variables.
- Refactored `appsettings.Development.json` to use structured database connection settings.
- Introduced `CreateGameCommand`, `CreateGameCommandHandler`, and `CreateGameCommandValidator` for better command handling and validation.
- Created `CreateGameMapper` and `CreateGameResponse` for mapping and response structure.
- Updated `DependencyInjection.cs` to register new services and repositories, including `GameRepository`.
- Refactored domain classes for better encapsulation and validation, including new value objects.
- Added `GamePlatform` and `Platform` classes to manage game-platform relationships.
- Modified `ApplicationDbContext` to utilize `IDatabaseConnectionProvider`.
- Centralized database configuration with `DatabaseConnectionProvider` and `DatabaseSettings`.
- Updated `GameConfiguration` to reflect domain model changes and nullable properties.
- Created and updated migration files to align with the new database schema.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
-  "ConnectionStrings": {
-    "Database": "Host=${DB_HOST};Port=${DB_PORT};Database=tc_cloud_games;Username=postgres;Password=postgres;"
+  "Database": {
+    "Host": "localhost",
+    "Port": "54320",
+    "Name": "tc_cloud_games",
+    "User": "postgres",
+    "Password": "postgres"
   },
   "Logging": {
     "LogLevel": {
