--- a/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
+++ b/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
@@ -18,6 +18,11 @@
     <ProjectReference Include="..\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\GetGame\" />
+    <Folder Include="Games\GetGameList\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
