Add Serilog integration and logging enhancements
- Updated `docker-compose.yml` to include Seq service.
- Added `UseSerilogRequestLogging` middleware in `ApplicationBuilderExtensions.cs`.
- Created `SerilogExtensions.cs` for custom Serilog configuration with timezone support.
- Introduced `UtcToLocalTimeEnricher.cs` for local timestamp logging.
- Modified `Program.cs` to utilize custom Serilog configuration.
- Updated logging settings in `appsettings.Development.json` to use Serilog.
- Refactored `CommandLogger.cs` to use `ILogger` from Microsoft.Extensions.Logging.
- Removed `BaseLogger.cs` in favor of standard logging practices.
- Enhanced `CorrelationMiddleware.cs` to log correlation IDs with Serilog.
- Updated `ServiceCollectionExtensions.cs` to remove `BaseLogger` registration.
- Improved EF Core logging in `ApplicationDbContext.cs` using Serilog.
- Added necessary package references for Serilog in project files.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -6,11 +6,25 @@
     "User": "postgres",
     "Password": "postgres"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
   "JwtSecretKey": "Secret_Key_Longer_Than_32_Characters_@#$%!"
