--- a/src/TC.CloudGames.Api/appsettings.json
+++ b/src/TC.CloudGames.Api/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //"TimeZone2": "E. South America Standard Time",
+  "TimeZone": "America/Sao_Paulo"
 }
