--- a/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
+++ b/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
