Refactor query handler and add utility extension.
Refactored `GetUserListQueryHandler` to use a base `QueryHandler` class and override `ExecuteAsync`. Removed redundant error handling in `GetUserListEndpoint`. Introduced a new `StringExtensions` class for joining strings with quotes, and added a project reference to `CrossCutting.Commons`.

--- a/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
+++ b/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="FastEndpoints.Messaging.Core" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TC.CloudGames.CrossCutting.Commons\TC.CloudGames.CrossCutting.Commons.csproj" />
+  </ItemGroup>
+
 </Project>
