--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Cache": "tc-cloudgames-redis:6379"
+  },
   "Database": {
     "Host": "localhost",
     "Port": "54320",
@@ -18,13 +21,21 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "Seq",
-        "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
+        "Args": {
+          "serverUrl": "http://tc-cloudgames-seq:5341"
+        }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
   "AllowedHosts": "*",
   "JwtSecretKey": "Secret_Key_Longer_Than_32_Characters_@#$%!"
