--- a/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
+++ b/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
     <PackageReference Include="Serilog" Version="4.2.0" />
   </ItemGroup>
 
