--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,12 @@ services:
     build:
       context: .
       dockerfile: src/TC.CloudGames.Api/Dockerfile
+    networks:
+      - my-network
     depends_on:
       - tc-cloudgames-db
+      - tc-cloudgames-redis
+      - tc-cloudgames-seq
 
   tc-cloudgames-db:
     image: postgres:latest
@@ -24,6 +28,8 @@ services:
       - ./.containers/database:/var/lib/postgresql/data
     ports:
       - "54320:5432"
+    networks:
+      - my-network
 
   tc-cloudgames-seq:
     image: datalust/seq:latest
@@ -33,6 +39,8 @@ services:
     ports:
       - 5341:5341
       - 8082:80
+    networks:
+      - my-network
 
   tc-cloudgames-redis:
     image: redis:latest
@@ -40,6 +48,27 @@ services:
     container_name: TC.CloudGames.Redis
     ports:
       - "6379:6379"
+    networks:
+      - my-network
     volumes:
       - ./.containers/redis:/data
     command: redis-server --appendonly yes --appendfilename appendonly.aof --dir /data
+
+  tc-cloudgames-DbManagement:
+    image: dpage/pgadmin4:latest
+    container_name: TC.CloudGames.PgAdmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - 15432:80
+    networks:
+      - my-network
+    volumes:
+      - ./.containers/pgadmin:/var/lib/pgadmin
+      - ./docker_pgadmin_servers.json:/pgadmin4/servers.json
+    depends_on:
+      - tc-cloudgames-db
+networks:
+  my-network:
+    driver: bridge
