--- a/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
+++ b/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
+    <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.2.0" />
+    <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
   </ItemGroup>
 
