Refactor service registration and improve disposal patterns
- Removed `IConfiguration` parameter from `AddCustomServices` and `AddDependencyInjection` methods for simplified service registration.
- Added `SonarAnalyzer.CSharp` package reference across multiple `.csproj` files with appropriate asset settings.
- Enhanced `ApplicationDbContext` and `PgDbConnectionProvider` classes to implement `IAsyncDisposable` and `IDisposable` for better resource management.
- Changed `PgRepository` constructor visibility from public to protected.
- Updated test project dependencies to newer versions with adjusted asset settings.

--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -29,6 +29,10 @@
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Enrichers.Sensitive" Version="1.7.3" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="10.9.0.115408">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
