--- a/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
+++ b/src/TC.CloudGames.CrossCutting.Commons/TC.CloudGames.CrossCutting.Commons.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.9.0.115408">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.2.0" />
     <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
