--- a/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
+++ b/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" Version="10.1.0" />
     <PackageReference Include="FastEndpoints.Messaging.Core" Version="6.0.0" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.9.0.115408">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
