Refactor project structure and enhance authentication
This commit removes references to `TC.CloudGames.CrossCutting.Commons` and `TC.CloudGames.CrossCutting.IoC`, replacing them with `TC.CloudGames.Infra.CrossCutting.Commons` and `TC.CloudGames.Infra.CrossCutting.IoC` to improve modularity.

Key changes include:
- Updated namespaces and references in various files, particularly for caching, middleware, and authentication.
- Significant modifications to the `GetUserEndpoint` class, changing the route to use email instead of user ID and expanding access roles.
- Revamped JWT authentication configuration for better secret key management.
- Introduced new authentication-related classes and interfaces (`IPasswordHasher`, `ITokenProvider`, `IUserContext`).
- Refactored caching mechanisms to utilize the new `Infra` namespace.
- Updated command handlers to incorporate new clock and extension classes.
- Enhanced user repository with new methods for retrieving users by email.

These changes reflect a comprehensive refactor aimed at improving code organization and functionality.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -38,5 +38,10 @@
     ]
   },
   "AllowedHosts": "*",
-  "JwtSecretKey": "Secret_Key_Longer_Than_32_Characters_@#$%!"
+  "Jwt": {
+    "SecretKey": "Secret_Key_Longer_Than_32_Characters_@#$%!",
+    "Issuer": "tc-cloudgames",
+    "Audience": "tc-cloudgames-developers",
+    "ExpirationInMinutes": 60
+  }
 }
