--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -37,7 +37,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\TC.CloudGames.Application\TC.CloudGames.Application.csproj" />
-        <ProjectReference Include="..\TC.CloudGames.CrossCutting.IoC\TC.CloudGames.CrossCutting.IoC.csproj" />
+        <ProjectReference Include="..\TC.CloudGames.Infra.CrossCutting.IoC\TC.CloudGames.Infra.CrossCutting.IoC.csproj" />
         <ProjectReference Include="..\TC.CloudGames.Infra.Data\TC.CloudGames.Infra.Data.csproj" />
     </ItemGroup>
 
