Refactor Dockerfile and update project references
Updated the Dockerfile to reflect new project paths for
cross-cutting concerns, replacing old references with
`TC.CloudGames.Infra.CrossCutting.IoC` and
`TC.CloudGames.Infra.CrossCutting.Commons`. Added a
`USER` directive and copied all files into the container.
Also, included a `.dockerignore` file in the
`TC.CloudGames.Api.csproj` to optimize the Docker build
process by excluding unnecessary files.

--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -41,6 +41,12 @@
         <ProjectReference Include="..\TC.CloudGames.Infra.Data\TC.CloudGames.Infra.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
 
     <PropertyGroup>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
