Refactor API endpoints and enhance database schema
Renamed and restructured game and user endpoints for clarity, changing `GetGameEndpoint` to `GetGameByIdEndpoint` and `GetUserEndpoint` to `GetUserByEmailEndpoint`. Introduced new endpoints for fetching games by name and users by ID. Updated the database schema with unique indexes and default schemas to ensure data integrity and improve performance. Added methods for seeding initial user data to facilitate testing and development. Overall, these changes enhance the API's functionality and align with best practices.

--- a/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
+++ b/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
@@ -19,6 +19,11 @@
     <ProjectReference Include="..\TC.CloudGames.Infra.CrossCutting.Commons\TC.CloudGames.Infra.CrossCutting.Commons.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\GetGameByName\" />
+    <Folder Include="Users\GetUserById\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
