Refactor user and game data handling for improved security
- Enhanced `SeedDataExtension` to create default and random users.
- Updated namespaces for `IGamePgRepository` and `IUserPgRepository`.
- Introduced `IUnitOfWork` interface for better database management.
- Added `IPasswordHasher` dependency for secure password handling in user creation.
- Implemented `PasswordHasher` class for hashing and verifying passwords.
- Modified `ApplicationDbContext` for improved dependency injection.
- Created `ModelBuilderExtensions` for flexible entity configuration.
- Updated `UserConfiguration` to securely handle passwords.
- Removed or modified migration files to align with schema changes.
- Updated project file to include `Microsoft.EntityFrameworkCore`.
- Registered `PasswordHasher` in `DependencyInjection`.
- Improved project structure by organizing classes under `Abstractions.Data`.

--- a/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
+++ b/src/TC.CloudGames.Application/TC.CloudGames.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="10.9.0.115408">
       <PrivateAssets>all</PrivateAssets>
@@ -17,11 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
     <ProjectReference Include="..\TC.CloudGames.Infra.CrossCutting.Commons\TC.CloudGames.Infra.CrossCutting.Commons.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Games\GetGameByName\" />
-    <Folder Include="Users\GetUserById\" />
   </ItemGroup>
 
   <PropertyGroup>
