Update logging configuration and package versions
Enhanced logging in SerilogExtensions.cs with application and environment properties. Updated NuGet package versions across multiple projects to 9.0.5. Changed default logging level to Debug in appsettings.Development.json. Improved ApplicationDbContext configuration for PostgreSQL and enabled lazy loading proxies.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -15,7 +15,7 @@
       "Serilog.Sinks.Seq"
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft": "Information"
       }
@@ -31,11 +31,10 @@
         }
       }
     ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "TC.CloudGames.Api"
+    }
   },
   "AllowedHosts": "*",
   "Jwt": {
