--- a/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
+++ b/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" Version="10.1.0" />
+    <PackageReference Include="Ardalis.Result.FluentValidation" Version="10.1.0" />
     <PackageReference Include="FastEndpoints.Messaging.Core" Version="6.1.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="10.9.0.115408">
       <PrivateAssets>all</PrivateAssets>
