--- a/test/TC.CloudGames.Domain.Tests/TC.CloudGames.Domain.Tests.csproj
+++ b/test/TC.CloudGames.Domain.Tests/TC.CloudGames.Domain.Tests.csproj
@@ -8,17 +8,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoFixture.AutoFakeItEasy" Version="4.18.1" />
+      <PackageReference Include="FakeItEasy" Version="8.3.0" />
+      <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.1.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
         <PackageReference Include="Bogus" Version="35.6.3" />
         <PackageReference Include="coverlet.collector" Version="6.0.4">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
-        <PackageReference Include="NSubstitute" Version="5.3.0" />
-        <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
         <PackageReference Include="Shouldly" Version="4.3.0" />
         <PackageReference Include="SonarAnalyzer.CSharp" Version="10.10.0.116381">
           <PrivateAssets>all</PrivateAssets>
