Update README and test configurations for xUnit
Enhanced README.md with detailed unit testing info, updated database name, and added commands for running tests. Included xunit.runner.json in TC.CloudGames.Api.Tests.csproj, TC.CloudGames.Application.Tests.csproj, and TC.CloudGames.Domain.Tests.csproj to standardize test runner settings across projects. Configured parallelization and diagnostic options in xunit.runner.json files.

--- a/test/TC.CloudGames.Application.Tests/TC.CloudGames.Application.Tests.csproj
+++ b/test/TC.CloudGames.Application.Tests/TC.CloudGames.Application.Tests.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="8.3.0" />
     <PackageReference Include="Bogus" Version="35.6.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
