--- a/test/TC.CloudGames.Domain.Tests/TC.CloudGames.Domain.Tests.csproj
+++ b/test/TC.CloudGames.Domain.Tests/TC.CloudGames.Domain.Tests.csproj
@@ -8,6 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Content Include="xunit.runner.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="AutoFixture.AutoFakeItEasy" Version="4.18.1" />
       <PackageReference Include="FakeItEasy" Version="8.3.0" />
       <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.1.1">
@@ -36,7 +42,7 @@
         <Using Include="Xunit" />
     </ItemGroup>
 
-    <ItemGroup>
+  <ItemGroup>
       <ProjectReference Include="..\..\src\TC.CloudGames.Domain\TC.CloudGames.Domain.csproj" />
     </ItemGroup>
 
