--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,11 @@ services:
       - tc-cloudgames-db
       - tc-cloudgames-redis
       - tc-cloudgames-seq
-
+      - tc-cloudgames-sonarqube
+    command: ["dotnet", "TC.CloudGames.Api.dll"]
+    environment:
+      - DOTNET_USE_POLLING_FILE_WATCHER=1
+      
   tc-cloudgames-db:
     image: postgres:latest
     container_name: TC.CloudGames.Db
@@ -25,9 +29,43 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     volumes:
-      - ./.containers/database:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "54320:5432"
+    networks:
+      - my-network
+
+  tc-cloudgames-sonarqube-db-init:
+    image: postgres:latest
+    container_name: TC.CloudGames.SonarQube.DbInit
+    depends_on:
+      - tc-cloudgames-db
+    environment:
+      - PGPASSWORD=postgres
+    entrypoint: >
+      sh -c "
+      echo 'Waiting for PostgreSQL to be ready...';
+      until pg_isready -h tc-cloudgames-db -U postgres; do sleep 2; done;
+      echo 'Initializing SonarQube database...';
+      psql -U postgres -h tc-cloudgames-db -tc 'SELECT 1 FROM pg_database WHERE datname = ''sonarqube'';' | grep -q 1 || psql -U postgres -h tc-cloudgames-db -c 'CREATE DATABASE sonarqube;'"
+    networks:
+      - my-network
+
+  tc-cloudgames-sonarqube:
+    image: sonarqube:latest
+    container_name: TC.CloudGames.SonarQube
+    depends_on:
+      - tc-cloudgames-db
+      - tc-cloudgames-sonarqube-db-init
+    environment:
+      - SONAR_JDBC_URL=jdbc:postgresql://tc-cloudgames-db:5432/sonarqube
+      - SONAR_JDBC_USERNAME=postgres
+      - SONAR_JDBC_PASSWORD=postgres
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+    ports:
+      - "9000:9000"
     networks:
       - my-network
 
@@ -51,24 +89,32 @@ services:
     networks:
       - my-network
     volumes:
-      - ./.containers/redis:/data
+      - redis_data:/data
     command: redis-server --appendonly yes --appendfilename appendonly.aof --dir /data
 
   tc-cloudgames-DbManagement:
     image: dpage/pgadmin4:latest
     container_name: TC.CloudGames.PgAdmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
     ports:
-      - 15432:80
+      - "15432:80"
     networks:
       - my-network
     volumes:
-      - ./.containers/pgadmin:/var/lib/pgadmin
+      - pgadmin_data:/var/lib/pgadmin
       - ./docker_pgadmin_servers.json:/pgadmin4/servers.json
     depends_on:
       - tc-cloudgames-db
+
 networks:
   my-network:
     driver: bridge
+
+volumes:
+  postgres_data:
+  redis_data:
+  pgadmin_data:
+  sonarqube_data:
+  sonarqube_extensions:
