--- a/src/TC.CloudGames.Api/Properties/launchSettings.json
+++ b/src/TC.CloudGames.Api/Properties/launchSettings.json
@@ -21,7 +21,8 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "DOTNET_USE_POLLING_FILE_WATCHER": "1"
       },
       "publishAllPorts": true,
       "useSSL": true
