--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - SONAR_JDBC_PASSWORD=postgres
     volumes:
       - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_logs:/opt/sonarqube/logs
       - sonarqube_extensions:/opt/sonarqube/extensions
     ports:
       - "9000:9000"
@@ -117,4 +118,5 @@ volumes:
   redis_data:
   pgadmin_data:
   sonarqube_data:
+  sonarqube_logs:
   sonarqube_extensions:
